lab15/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-v1

spec:
  ingressClassName: nginx
  defaultBackend:
    name: custom-default-backend
    image:
      repository: supergiantkir/animals:hare
      tag: "latest"
      pullPolicy: Always
    port: 80
  rules:
    - http:
       paths:
        - path: /
          pathType: Prefix

          backend:
            service:
              name: moose-svc
              port:
                 number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-v2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  defaultBackend:
    name: custom-default-backend
    image:
      repository: supergiantkir/animals:hare
      tag: "latest"
      pullPolicy: Always
    port: 80
  rules:
    - http:
       paths:
        - path: /
          pathType: Prefix

          backend:
            service:
              name: bear-svc
              port:
                 number: 80
