lab15/default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-deployment
spec:
  selector:
    matchLabels:
      app: default  
  replicas: 1 
  template: 
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: default
        image: supergiantkir/animals:hare
        ports:
        - containerPort: 80
---

kind: Service      
apiVersion: v1     
metadata:
  name: default-backend 
spec:
  selector:
    app: default   
  ports:          
  - name: http    
    protocol: TCP
    port: 80
    targetPort: 80
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80
